# ProgrammingInC

AdvCProg_c99/: CMakeLists.txt  c_signalling.c  conv_to_phonetic.c  declsprob.c  greenhouse2.c  greenhouse_memory.c  greenhouse_temps.c  linked_lists.c  palindromes.c  pointer_func_precedence.c  preproc_for.c  socket_structures.c  sorting_stuff.c  string_changes.c  ticktock.c
CCalc/: CMakeLists.txt  calc_funcs.c  funcsdef.h  header_includes.h  main.c
Courseware/QACPROG/: QACPROG_1.0.txt
INOUT/: filecpy.vcxproj
INOUT/Original/: filecpy1.c  lines.c
INOUT/Solution/: filecpy1.c  filecpy2.sln  lines2.vcxproj  lines3.c
LARGEPRG/: all_in_1.sln  all_in_1.vcxproj  main.c  modular.vcxproj
PROCESS/: signal.c  signal.vcxproj
PROCESS/Original/: child.c  signal.sln  system.sln
PROCESS/Solution/: child.sln  parent1.c  parent1.vcxproj  parent2.c  parent2.vcxproj  system.c  system.vcxproj
Sortdemo/BUBBLE/: Bubble.c  Bubble.vcxproj.filters
Sortdemo/INSERT/: Insert.vcxproj
Sortdemo/QSORT/: Qsort.c  Qsort.vcxproj.filters
Sortdemo/SELECT/: Select.vcxproj  Select.vcxproj.filters
Sortdemo/SHELL/: Shell.c
Task1/: CMakeLists.txt  main.c
Task2/: CMakeLists.txt  main.c
Task2a/: CMakeLists.txt  main.c
c_comms/linux/: client.c  makefile  server.c  udp_client.c  udp_server.c
c_comms/windows/: client.c  compiler_note.txt  server.c
qacadv/: Timer.c
qacadv/ARRAYS/: arraytim.c  quiz.sln
qacadv/DECLS/: decls.c  decls.sln  decls.vcxproj
qacadv/DYNMEM/: readfile.sln  readfile.vcxproj  readline.vcxproj  readline.vcxproj.filters  timer.h
qacadv/LINKLIST/: Link2.h  (+11 more)
(+858 files in other folders)
