cmake_minimum_required(VERSION 3.21)
project(AdvCProg_c99 C)

set(CMAKE_C_STANDARD 99)

add_executable(string_changes string_changes.c)
add_executable(greenhouse_temps greenhouse_temps.c)
add_executable(preproc_for preproc_for.c)
add_executable(palindromes palindromes.c)
add_executable(declsprob declsprob.c)
add_executable(pointer_func_precedence pointer_func_precedence.c)
add_executable(conv_to_phonetic conv_to_phonetic.c)
add_executable(greenhouse2 greenhouse2.c)
add_executable(socket_structures socket_structures.c)
add_executable(greenhouse_memory greenhouse_memory.c)
add_executable(c_signalling c_signalling.c)
add_executable(ticktock ticktock.c)
add_executable(sorting_stuff sorting_stuff.c)
add_executable(linked_lists linked_lists.c)